Fix notice z-index over than Mui

--- a/app/javascript/bluebox/styles/component/notice.scss
+++ b/app/javascript/bluebox/styles/component/notice.scss
@@ -5,14 +5,15 @@
   height: 0;
   width: 100%;
   font-size: 12px;
-  z-index: 99;
+  z-index: 2998;
+
   .notice {
     position: absolute;
     top: 1px;
     left: 50%;
     transform: translateX(-50%);
     padding: 7px 20px;
-    z-index: 999;
+    z-index: 2999;
 
     @include breakpoint(md) {
       width: auto;
